# nah

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  config.example.yaml  pyproject.toml
.claude/commands/: fd-close.md  fd-deep.md  fd-explore.md  fd-new.md  fd-status.md  fd-verify.md  nah-demo.md
.github/workflows/: publish.yml
site/: install.md
site/configuration/: actions.md  index.md  llm.md
src/nah/: __init__.py  agents.py  bash.py  cli.py  config.py  content.py  hook.py  llm.py  log.py  paths.py  remember.py  taxonomy.py
src/nah/data/: policies.json  types.json
src/nah/data/classify_full/: container_destructive.json  db_read.json  db_write.json  filesystem_delete.json  filesystem_read.json  filesystem_write.json  git_discard.json  git_history_rewrite.json  git_remote_write.json  git_safe.json  git_write.json  lang_exec.json  network_outbound.json  network_write.json  package_install.json  package_run.json  package_uninstall.json  process_signal.json  sql_write.json
src/nah/data/classify_minimal/: filesystem_delete.json  filesystem_read.json  filesystem_write.json  git_discard.json  git_history_rewrite.json  git_safe.json  git_write.json  network_outbound.json  (+1 more)
tests/: conftest.py  test_agents.py  test_bash.py  test_cli.py  test_config.py  test_content.py  test_fd014_cleanup.py  test_fd080_write_llm.py  test_hint_battery.py  test_hook_classify.py  test_hook_integration.py  test_hook_llm.py  test_hook_robustness.py  test_llm.py  test_llm_live.py  test_log.py  test_normalize_battery.py  test_paths.py  test_remember.py  test_taxonomy.py
